--- a/index.html
+++ b/index.html
@@ -45,9 +45,9 @@
 			<div class="row">
 				<div class="col-md-4">
 					<ul class="info">
-						<li><span class="first-block">Full Name:</span><span class="second-block">Aju Thomas</span></li>
-						<li><span class="first-block">Phone:</span><span class="second-block">+1 647-547-7033</span></li>
-						<li><span class="first-block">Email:</span><span class="second-block">thomasaju1989@gmail.com</span></li>
+						<li><span class="first-block">Full Name:</span><span class="second-block">Venkata Aravinda Sai Janga</span></li>
+						<li><span class="first-block">Phone:</span><span class="second-block">+1 (647)-547-0086</span></li>
+						<li><span class="first-block">Email:</span><span class="second-block">venkatui1001@gmail.com</span></li>
 					</ul>
 				</div>
 				<div class="col-md-8">
